# OS_testing

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  main.cpp  sum_test.cpp
.github/workflows/: docker-hub.yml  release.yml  style.yml  unit-tests-docker.yml  unit-tests.yml
src/: CMakeLists.txt  main.cpp  operations.cpp  operations.hpp
test/: CMakeLists.txt  division_test.cpp  modulo_test.cpp  multiplication_test.cpp  power_test.cpp  subtraction_test.cpp  sum_test.cpp
tests/: sum_test.cpp
